# AIAppBuilder

./: .gitignore  .replit  CLAUDE.MD  CODE_QUALITY_REVIEW_SUMMARY.md  README.md  REFACTORING_TASKS.md  app_templates.py  config.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test_basic_pydantic.py  test_pydantic_models.py  test_schemas_only.py  utils.py
.github/workflows/: pylint.yml
.streamlit/: config.toml
assets/: custom.css
